my first chnges

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
     <button class="not-btn green" (click) = getSuccessNotification()>Success</button>
     <button class="not-btn custom" (click) = getCustomizedNotification()>Customised</button>
 </div>
+<p>my test</p>
+<p>my tes1t</p>
 
 <div #parent> </div> 
 <router-outlet></router-outlet>
